单例模式修改

--- a/软件设计/软件设计模式/06单例模式.md
+++ b/软件设计/软件设计模式/06单例模式.md
@@ -18,4 +18,4 @@
         
      2. 静态内部类
 
-        
+        ![image-20211031175709081](C:\oneDrive\J学习笔记\codingNote\软件设计\软件设计模式\img\image-20211031175709081.png)
