软件设计模式：更新个人总结

--- a/软件设计/软件设计模式/02软件设计模式个人总结.md
+++ b/软件设计/软件设计模式/02软件设计模式个人总结.md
@@ -43,7 +43,7 @@
      3. 简单说：**不要接口依赖实现类，而是依赖接口**
   3. 组合模式（Composite Pattern）
      1. **树状结构**的组合
-     2. 根节点、子节点的组合
+     2. 根节点、子节点的组合,xml,html等
   4. 装饰器模式（Decorator Pattern）
      1. 组合封装已有的实现类，**增强或减弱已有的功能**
   5. 外观模式（Facade Pattern）
