--- a/软件设计/软件设计模式/02软件设计模式个人总结.md
+++ b/软件设计/软件设计模式/02软件设计模式个人总结.md
@@ -40,7 +40,7 @@
   2. 桥接模式（Bridge Pattern）
      1. 组合封装所**依赖对象**的接口或着抽象类，**实现类由外部传入**，类似控制反转
      2. 多种依赖，每种依赖多种实现，能组装出更多不同功能的实现类
-     3. 简单说：**不要接口依赖实现类，而是依赖接口**
+     3. 简单说：**对象的组装，不要直接依赖实现类，而是依赖接口**
   3. 组合模式（Composite Pattern）
      1. **树状结构**的组合
      2. 根节点、子节点的组合,xml,html等
@@ -88,7 +88,7 @@
   6. 备忘录模式（Memento Pattern）
      1. 简单的备忘录：针对某种类型的备忘录管理类，被备份的类需要实现状态获取，状态的恢复的接口
      2. 通用备忘录：针对中间类型的备忘录管理类，中间类可以保存各种类型。其它同上
-     3. 简单说：**还没遇到过需要用到备忘录模式哇**
+     3. 简单说：**最初状态的恢复，还没遇到过需要用到备忘录模式哇**
   7. 观察者模式(发布-订阅模式)（Observer Pattern）
      1. 注册中心类（记录接口，调用接口），订阅者（实现接口），发布者（发布消息）
      2. 一对多的依赖关系
@@ -101,7 +101,8 @@
   9. 策略模式（Strategy Pattern）
      1. 把经常变化的部分变成一个接口的调用，通过不同的实现类，实现不同的功能，或着得出不同的结果
      2. 与桥接模式类似，但更注重其中一个接口
-     3. 简单说：**就是传接口实现类**
+     3. 不同的优惠算法（不同的策略），就需要不同的实现类
+     4. 简单说：**就是传接口的实现类**
   10. 模板模式（Template Pattern）
       1. 抽象类提前固化要执行的顺序或都功能，少量的实现由继承类实现
       2. **一般情况不建议使用，可以通过传入接口实现类的方式实现**
