--- a/后端编程/golang/基础部分.md
+++ b/后端编程/golang/基础部分.md
@@ -214,7 +214,7 @@ var (
 	p  = &Vertex{1, 2} // 创建一个 *Vertex 类型的结构体（指针）
 )
 
-
+//如果我们有一个指向结构体的指针 p，那么可以通过 (*p).X 来访问其字段 X。不过这么写太啰嗦了，所以语言也允许我们使用隐式间接引用，直接写 p.X 就可以。
 
 ```
 
@@ -352,5 +352,15 @@ func (v Vertex) Abs() float64 {
 //使用
 v := Vertex{3, 4}
 fmt.Println(v.Abs())
+
+//非结构体类型声明方法
+type MyFloat float64
+
+func (f MyFloat) Abs() float64 {
+	if f < 0 {
+		return float64(-f)
+	}
+	return float64(f)
+}
 ```
 
