--- a/后端编程/golang/基础部分.md
+++ b/后端编程/golang/基础部分.md
@@ -345,10 +345,28 @@ func adder() func(int) int {
 type Vertex struct {
 	X, Y float64
 }
-//定义
+//定义，
 func (v Vertex) Abs() float64 {
+     v.X = v.X * 2  //v 非指针类型，这里修改后，不影响原值
 	return math.Sqrt(v.X*v.X + v.Y*v.Y)
 }
+//定义，
+func (v *Vertex) Abs() float64 {
+     v.X = v.X * 2  //v 指针类型，这里修改后，对象的值改变
+	return math.Sqrt(v.X*v.X + v.Y*v.Y)
+}
+//下面两个函数，与上面的功能相同,但有以下区别
+//1，以下函数不能通过Vertex的对象直接调用，需要把Vertex的对象传入
+//2, 以下函数，当Vertex从非指针改为指针时，传入的参数也需要改成指针
+func Abs(v Vertex) float64 {
+     v.X = v.X * 2
+	return math.Sqrt(v.X*v.X + v.Y*v.Y)
+}
+func Abs(v *Vertex) float64 {
+     v.X = v.X * 2
+	return math.Sqrt(v.X*v.X + v.Y*v.Y)
+}
+
 //使用
 v := Vertex{3, 4}
 fmt.Println(v.Abs())
@@ -361,6 +379,104 @@ func (f MyFloat) Abs() float64 {
 		return float64(-f)
 	}
 	return float64(f)
+}
+
+//方法与指针重定向
+func (v *Vertex) Scale(f float64) {
+	...
+}
+v := Vertex{3, 4}
+v.Scale(5)  // OK,这里会因为Scale的接收者为指针，会被编译器解释为(&v).Scale(5)
+p := &v
+p.Scale(10) // OK
+---------------------------
+func (v Vertex) Abs() float64 {
+	return math.Sqrt(v.X*v.X + v.Y*v.Y)
+}
+v := Vertex{3, 4}
+v.Scale(5)  // OK
+p := &v
+p.Scale(10) // OK,这里会因为Scale的接收者为值（非指针），会被编译器解释为(*p).Scale(5)
+
+```
+
+## 接口
+
+```go
+//1，定义,与结构休有点类型，不过里面声明的是接口
+//2，使用时，不需要什么继承啊，关联啊之类的，  只需要结构体中有这个方法，就是实现了这个接口
+//3，更像一个标签，或着像一个声明
+//4，最好的使用方式是作为 -->方法或着函数的参数或着返回值
+//5, 属于隐式实现，无需“implements”等关键字。
+//6, 接口属性一个对象，内部会组装实现接口方法的对象，接口中的方法被调用时，会调用组装中同名的方法
+//7, 通过6的描术，如果接口指定了实现类，但没有创建这个实现类，接口的值不为空。调用接口本身是不会报 “空指针异常”，而是方法的接收者传入了nil 
+
+type Abser interface {
+	Abs() float64
+}
+
+//空接口,可保存任何类型的值
+//可以理解为每个类型都至少实现了零个方法
+interface{}
+type Abser interface{
+    
+}
+```
+
+## 类型断言
+
+```go
+//提供了访问接口值底层具体值(实现类)的方式
+//该语句断言接口值 i 保存了具体类型 T，并将其底层类型为 T 的值赋予变量 t。若 i 并未保存 T 类型的值，该语句就会触发一个恐慌。
+t := i.(T)
+
+//如果多接收一个返回值，则不会抛恐慌
+t, ok := i.(T)
+//例子
+var i interface{} = "hello"
+s := i.(string)
+fmt.Println(s)
+
+s, ok := i.(string)
+fmt.Println(s, ok)
+
+f, ok := i.(float64)
+fmt.Println(f, ok)
+
+f ,ok= i.(float64) // 报错(panic)
+fmt.Println(f)
+
+// switch 的类型选择
+switch v := i.(type) {
+case T:
+    // v 的类型为 T
+case S:
+    // v 的类型为 S
+default:
+    // 没有匹配，v 与 i 的类型相同
+}
+
+//例子
+switch v := i.(type) {
+    case int:
+        fmt.Printf("Twice %v is %v\n", v, v*2)
+    case string:
+        fmt.Printf("%q is %v bytes long\n", v, len(v))
+    default:
+		fmt.Printf("I don't know about type %T!\n", v)
+}
+
+
+```
+
+## 错误
+
+```go
+//一般用法
+type error interface {
+    Error() string
+    ...
+    ...
 }
 ```
 
