更新java多线程笔记

--- a/后端编程/java/java特性记录/多线程基础.md
+++ b/后端编程/java/java特性记录/多线程基础.md
@@ -107,7 +107,19 @@ class HelloThread extends Thread {
 #### volatile 关键字
 
 - 多线程中的共享变量需要这个关键字
+
 - 与内存跟Cpu的高速缓存有关
+
+- **是保证时效性不是原子性，多线程中，仍然需要加锁。**不能用于线程同步，只是用于提高程序执行效率
+
+- 续上：也就是说 volatile 只保证变量改动之后立刻回写，之后的新线程读取到的肯定是更新后的值，但之前已经获取过此变量本地副本的线程无法得知主内存中这个变量有了修改。
+
+- 共享变量n是不是要用volatile修饰？
+
+  - 不需要。
+
+    synchronized除了加锁外，还具有内存屏障功能，并且强制读取所有共享变量的主内存最新值，退出synchronized时再强制回写主内存（如果有修改）
+
 - 说明参考http://www.cnblogs.com/dolphin0520/p/3920373.html
 
 #### 守护线程：
@@ -118,4 +130,334 @@ Thread t = new MyThread();
 t.setDaemon(true);
 t.start();
 ```
+
+#### 线程同步：共享变量，不同线程中数据不一致的问题
+
+问题：多个线程同时读写共享变量，会出现数据不一致的问题
+
+```java
+//多个线程中，只有一个线程能够执行
+//缺点: 性能下降
+//不必担心抛出异常,最后会自动释放锁的
+synchronized(Counter.lock) { // 获取锁
+    ...
+} // 释放锁
+
+//另外不需要synchronized的操作，即java中的原子操作，不会被中断的操作。注意是单行代码的执行，如果多行，则需要锁
+基本类型（long和double除外）赋值，例如：
+    int n = m；
+引用类型赋值，例如：
+    List<String> list = anotherList。
+  
+```
+
+#### 线程同步：锁的选择
+
+- 当前对象是否可以有多个实例
+- 多个实例是否需要同一个锁（大部份不需要）
+- 锁可以选择自己，this
+
+```java
+public void add(int n) {
+    synchronized(this) { // 锁住this
+        count += n;
+    } // 解锁
+}
+//等价于
+public synchronized void add(int n) { // 锁住this
+    count += n;
+} // 解锁
+    
+//静态方法的销，相当于class的锁，对于当前类来说，是全局的
+public synchronized static void test(int n) {
+    ...
+}
+
+//单纯的获取，不需要锁
+ public int get() {
+        return count;
+ }
+
+//创建对象返回，需要锁，多线程返回时，会返回同一个Pair对象。
+ public Pair get() {
+     Pair p = new Pair();
+     p.first = first;
+     p.last = last;
+     return p;
+ }
+```
+
+
+
+#### 死锁：
+
+- Java的线程锁是可重入的锁。
+
+```java
+//以下代码没有问题，获取锁的时候，不但要判断是否是第一次获取，还要记录这是第几次获取。每获取一次锁，记录+1，每退出synchronized块，记录-1，减到0的时候，才会真正释放锁。
+public class Counter {
+    private int count = 0;
+    public synchronized void add(int n) {
+        if (n < 0) {
+            dec(-n);
+        } else {
+            count += n;
+        }
+    }
+    public synchronized void dec(int n) {
+        count += n;
+    }
+}
+```
+
+- 死锁是两个锁以上才会出现的,
+
+- 在获取多个锁的时候，不同线程获取多个不同对象的锁可能导致死锁。对下面代码，线程1和线程2如果分别执行`add()`和`dec()`方法时：
+
+  - 线程1：进入`add()`，获得`lockA`；
+  - 线程2：进入`dec()`，获得`lockB`。
+
+  随后：
+
+  - 线程1：准备获得`lockB`，失败，等待中；
+  - 线程2：准备获得`lockA`，失败，等待中。
+
+```java
+public void add(int m) {
+    synchronized(lockA) { // 获得lockA的锁
+        this.value += m;
+        synchronized(lockB) { // 获得lockB的锁
+            this.another += m;
+        } // 释放lockB的锁
+    } // 释放lockA的锁
+}
+
+public void dec(int m) {
+    synchronized(lockB) { // 获得lockB的锁
+        this.another -= m;
+        synchronized(lockA) { // 获得lockA的锁
+            this.value -= m;
+        } // 释放lockA的锁
+    } // 释放lockB的锁
+}
+```
+
+#### 线程：wait和notify
+
+- 正确编写多线程代码是非常困难的，需要仔细考虑的条件非常多，任何一个地方考虑不周，都会导致多线程运行时不正常。
+- golang中有一个叫管道的东西，不需要共享变量实现多线程的处理，这一点比java好多了。
+
+```java
+//如果queue，则阻塞，并且释放锁
+//为啥需要while(queue.isEmpty())，而不是 if(queue.isEmpty()),因为一旦释放this锁，而queue就会出异常，所以需要重释放锁，让getTask()的线程继续等待
+public synchronized String getTask() {
+    while (queue.isEmpty()) {
+        // 释放this锁:
+        this.wait();
+        // 重新获取this锁
+    }
+    return queue.remove();
+}
+//通常来说，notifyAll()更安全。有些时候，如果我们的代码逻辑考虑不周，
+//用notify()会导致只唤醒了一个线程，而其他线程可能永远等待下去醒不过来了。
+//notify() 随机 唤醒了一个线程
+public synchronized void addTask(String s) {
+    this.queue.add(s);
+    this.notify(); // 唤醒在this锁等待的线程，性能更好一些
+    //this.notifyAll() //更安全
+}
+
+
+```
+
+#### ReentrantLock的使用
+
+- synchronized 是很重的锁，性能开销很大，二是获取时必须一直等待，没有额外的尝试机制
+
+- `ReentrantLock`是Java代码实现的锁
+
+   ```java
+    //需要手动获取锁，并且手动释放锁
+    public void add(int n) {
+        lock.lock();//手动获取锁
+        try {
+            count += n;
+        } finally {
+            lock.unlock();//手动释放锁
+        }
+    }
+    //
+    if (lock.tryLock(1, TimeUnit.SECONDS)) {
+        try {
+            ...
+        } finally {
+            lock.unlock();
+        }
+    }else{//1秒后，如果获取锁失败，则执行这里
+        ....
+    }
+   ```
+
+- 用ReentrantLock 实现wait和notify的功能
+
+   ```java
+   class TaskQueue {
+       private final Lock lock = new ReentrantLock();
+       private final Condition condition = lock.newCondition();//实现wait和notify
+       private Queue<String> queue = new LinkedList<>();
+   
+       public void addTask(String s) {
+           lock.lock();
+           try {
+               queue.add(s);
+               condition.signalAll();//notify
+           } finally {
+               lock.unlock();
+           }
+       }
+   
+       public String getTask() {
+           lock.lock();
+           try {
+               while (queue.isEmpty()) {
+                   condition.await();//wait
+               }
+               return queue.remove();
+           } finally {
+               lock.unlock();
+           }
+       }
+   }
+   ```
+   
+
+#### 使用：ReadWriteLock
+
+- 提高读的性能，在没有写入的情况下，读取无锁，写有锁。当写入时，写入和读取都有锁
+
+- 这是一种悲观的读锁，最大的保证线程安全
+
+- ```java
+  public class Counter {
+      private final ReadWriteLock rwlock = new ReentrantReadWriteLock();
+      private final Lock rlock = rwlock.readLock();//读锁
+      private final Lock wlock = rwlock.writeLock();//写锁
+      private int[] counts = new int[10];
+  
+      public void inc(int index) {
+          wlock.lock(); // 加写锁
+          try {
+              counts[index] += 1;
+          } finally {
+              wlock.unlock(); // 释放写锁
+          }
+      }
+  
+      public int[] get() {
+          rlock.lock(); // 加读锁
+          try {
+              return Arrays.copyOf(counts, counts.length);
+          } finally {
+              rlock.unlock(); // 释放读锁
+          }
+      }
+  }
+  ```
+
+#### 使用：StampedLock，与ReadWriteLock差不多，但是乐观锁。为保存数据的正确性，需要增加判断
+
+```java
+public class Point {
+    private final StampedLock stampedLock = new StampedLock();
+
+    private double x;
+    private double y;
+
+    public void move(double deltaX, double deltaY) {
+        long stamp = stampedLock.writeLock(); // 获取写锁
+        try {
+            x += deltaX;
+            y += deltaY;
+        } finally {
+            stampedLock.unlockWrite(stamp); // 释放写锁
+        }
+    }
+
+    public double distanceFromOrigin() {
+        long stamp = stampedLock.tryOptimisticRead(); // 获得一个乐观读锁
+        // 注意下面两行代码不是原子操作
+        // 假设x,y = (100,200)
+        double currentX = x;
+        // 此处已读取到x=100，但x,y可能被写线程修改为(300,400)
+        double currentY = y;
+        // 此处已读取到y，如果没有写入，读取是正确的(100,200)
+        // 如果有写入，读取是错误的(100,400)
+        if (!stampedLock.validate(stamp)) { // 检查乐观读锁后是否有其他写锁发生
+            stamp = stampedLock.readLock(); // 获取一个悲观读锁
+            try {
+                currentX = x;
+                currentY = y;
+            } finally {
+                stampedLock.unlockRead(stamp); // 释放悲观读锁
+            }
+        }
+        return Math.sqrt(currentX * currentX + currentY * currentY);
+    }
+}
+```
+
+#### java中集合对象的线程安全与非安全的实现类
+
+| 接口  | 非线程安全              | 线程安全                                 |
+| :---- | :---------------------- | :--------------------------------------- |
+| List  | ArrayList               | CopyOnWriteArrayList                     |
+| Map   | HashMap                 | ConcurrentHashMap                        |
+| Set   | HashSet / TreeSet       | CopyOnWriteArraySet                      |
+| Queue | ArrayDeque / LinkedList | ArrayBlockingQueue / LinkedBlockingQueue |
+| Deque | ArrayDeque / LinkedList | LinkedBlockingDeque                      |
+
+  
+
+#### Atomic 无锁的线程安全类，线程少的情况，性能高，高并发中性能就低
+
+- 适用于计数器，累加器等。
+
+#### 线程池：ExecutorService
+
+```java
+
+// 创建固定大小的线程池:
+ExecutorService executor = Executors.newFixedThreadPool(3);
+// 提交任务:
+executor.submit(task1);
+executor.submit(task2);
+executor.submit(task3);
+executor.submit(task4);
+executor.submit(task5);
+
+//FixedThreadPool：线程数固定的线程池；
+//CachedThreadPool：线程数根据任务动态调整的线程池；
+//SingleThreadExecutor：仅单线程执行的线程池。
+//ScheduledThreadPool : 定期执行
+```
+
+#### Future:可以返回结果的多线程
+
+- `get()`：获取结果（如果异步任务已经完成，我们就直接获得结果。如果异步任务还没有完成，那么`get()`会阻塞，直到任务完成后才返回结果）
+- `get(long timeout, TimeUnit unit)`：获取结果，但只等待指定的时间；
+- `cancel(boolean mayInterruptIfRunning)`：取消当前任务；
+- `isDone()`：判断任务是否已完成。
+
+```java
+Callable task = () -> method.invoke(videoPlayer, args);
+FutureTask futureTask = new FutureTask(task);
+webView.post(futureTask);//切到主线程
+Object o = futureTask.get();//获取结果
+```
+
+#### 使用CompletableFuture
+
+- 与Future类拟，但提供异步回调的方法
+- 提供链式调用
+- 参考地址https://www.liaoxuefeng.com/wiki/1252599548343744/1306581182447650
 
